compiler/tests/fa/errors/pure_fnval_fa.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع اعمال(f تابع (صحیح۳۲) صحیح۳۲, x صحیح۳۲) صحیح۳۲:
    بازگشت f(x)
پایان

تابع اصلی:
    g خودکار = (v صحیح۳۲) => v + 1
    چاپ(اعمال(g, 4))
پایان
